Alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -22,10 +22,6 @@
   background-color: white;
 }
 
-.col-inner-container {
-  padding: 10px
-}
-
 .stripe {
   background: rgba(255, 228, 45, 0.78);
   padding: 2%;
